# ecs_snake_game

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile
.cache/clangd/index/: ComponentManager.cpp.9A122406223E4AF3.idx  ComponentManager.h.7D22C8CEA5E12908.idx  ComponentPool.h.160E2749D7CD3CB6.idx  Components.h.2BE01127ABBA65BC.idx  Engine.cpp.E02A081AF58E5E25.idx  Engine.h.56D947AEEFC2711A.idx  EntityIdPool.cpp.7CAE3FB95333775D.idx  EntityIdPool.h.757B39093BE4972B.idx  EntityManager.cpp.4FF6B254A8F109AD.idx  EntityManager.h.90C5C87E555C84E4.idx  IComponentPool.h.A35007E76837550D.idx  ISystem.h.4639F45C8F6A083C.idx  InputSystem.cpp.EB4B444B51EFBA9E.idx  InputSystem.h.90CB9EF92A8BE9DC.idx  PoolAlreadyExistsError.h.7612C6BD48BD827E.idx  PoolIdNotFoundError.h.9B7D3B6E7E502ADB.idx  PoolOverflowError.h.CDA241918537A50A.idx  Signature.h.1F3596A302AE6189.idx  SparseSet.h.43B3FFDB55DC93D3.idx  System.h.9C81C1AA8E894114.idx  SystemManager.cpp.C7B4A8856B0B1D4D.idx  SystemManager.h.FAA3D37EEAF71686.idx  TextRenderSystem.cpp.ECDC5A49950363AC.idx  TextRenderSystem.h.D2BF456FC59F7061.idx  main.cpp.77BF3749EE19475D.idx
include/engine/: Engine.h
include/engine/component/: Component.h  ComponentManager.h  ComponentPool.h  IComponentPool.h  PoolAlreadyExistsError.h  PoolIdNotFoundError.h  PoolOverflowError.h
include/engine/core/: EventBus.h  Signature.h  SparseSet.h
include/engine/entity/: EntityIdPool.h  EntityManager.h
include/engine/system/: ISystem.h  System.h  SystemManager.h
include/game/: CollisionSystem.h  Components.h  Events.h  FoodSpawnSystem.h  GraphicsInputSystem.h  GraphicsRenderSystem.h  GrowingSystem.h  IGame.h  InitSystem.h  InputSystem.h  MovementSystem.h  TextInputSystem.h  TextRenderSystem.h
src/: CMakeLists.txt  main.cpp
src/engine/: ComponentManager.cpp  Engine.cpp  EntityIdPool.cpp  EntityManager.cpp  SystemManager.cpp
src/game/: CollisionSystem.cpp  FoodSpawnSystem.cpp  GraphicsInputSystem.cpp  GraphicsRenderSystem.cpp  GrowingSystem.cpp  InitSystem.cpp  InputSystem.cpp  MovementSystem.cpp  TextInputSystem.cpp  TextRenderSystem.cpp
